# bclib

./: .codecov.yml  .travis.yml  CMakeLists.txt  README.md  RWarningException.h  TestClass.h  appveyor.yml  bclibVersion.h.in  build_examples.txt  cmakeshell.sh  matrix.h  order.h  simpleAssert.h
.github/workflows/: ccpp.yml
bclibtest/: CMakeLists.txt  RWarningExceptionTest.cpp  RWarningExceptionTest.h  VersionTest.cpp  VersionTest.h  main.cpp  matrixTest.cpp  matrixTest.h  orderTest.cpp  orderTest.h  simpleAssertTest.cpp  simpleAssertTest.h
bclibtest/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
